--- a/u1-u2-u3-review-starter.Rmd
+++ b/u1-u2-u3-review-starter.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Unit 1 - 3 Review Starter"
-author: "Insert your group number here"
-date: "Insert date here"
+author: "Technologic"
+date: "2/23/23"
 output: html_document
 ---
 
